force-app/main/default/objects/SSO_JIT_Provisioning_Settings__c/SSO_JIT_Provisioning_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store settings to configure Just-in-time provisioning settings for Single Sign On.</description>
    <label>SSO JIT Provisioning Settings</label>
</CustomObject>