force-app/main/default/objects/SSO_JIT_Provisioning_Settings__c/fields/Account_Owner_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Nickname__c</fullName>
    <description>26/10/2016 - Garth James (Salesforce) - Created. 
This field stores the Username for the account owner for newly created accounts during JIT provisioning for suppliers. Said another way, when the SupplierJITProvisioner class runs to create a new account, it will use this value to find the account owner. 

To be clear: this is meant to be that user&apos;s NICKNAME (as opposed to Username or Email address). This is because the Nickname is unique.</description>
    <inlineHelpText>When the SupplierJITProvisioner class runs to create a new account, it will use this value to find the account owner. To be clear: this is meant to be that user&apos;s NICKNAME (as opposed to Username or Email address). This is because the Nickname is unique.</inlineHelpText>
    <label>Account Owner Nickname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>