force-app/main/default/objects/SSO_JIT_Provisioning_Settings__c/fields/Account_Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Username__c</fullName>
    <description>26/10/2016 - Garth James (Salesforce) - Created. 
This field stores the Username for the account owner for newly created accounts during JIT provisioning for suppliers. Said another way, when the SupplierJITProvisioner class runs to create a new account, it will use this value to find the account owner.</description>
    <inlineHelpText>When the SupplierJITProvisioner class runs to create a new account, it will use this value to find the account owner.</inlineHelpText>
    <label>Account Owner Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>