force-app/main/default/objects/SSO_JIT_Provisioning_Settings__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>26/10/2016 - Garth James (Salesforce) - created to store User Profile for the SupplierJITProvisioner class. This is the profile that will be given to the user created through just-in-time provisioning for Suppliers.</description>
    <label>Profile Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>