force-app/main/default/objects/SSO_JIT_Provisioning_Settings__c/fields/SSO_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>SSO_Configuration_Name__c</fullName>
    <description>Garth James - 10.11.2016 - created to store which SSO Configuration will be used for this group of settings. Note that SAML provisioning will itself already know which SSO Configuration it has been invoked through - this has just been created to support that for integrity checks and testing</description>
    <inlineHelpText>Stores which SSO Configuration will be used for this group of settings. Note that SAML provisioning will itself already know which SSO Configuration it has been invoked through - this exists to support integrity checks and testing.</inlineHelpText>
    <label>SSO Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>